	PR c++/82401 	* name-lookup.c (member_name_cmp): Return 0 if a == b.

* g++.dg/cpp0x/pr82401.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@255084 138bc75d-0d04-0410-961f-82ee72b054a4